# ewe-nllb

./: .gitignore  Dockerfile  LICENSE  README.md  auth.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: app.py
api/static/: index.html
ewe_nllb/: __init__.py  cli.py  translator.py  tts.py
inference/: pipeline.py
processing/: cleaner.py  deduplicator.py  quality_filter.py  splitter.py
scrapers/: base_scraper.py  ebible_loader.py  jw_scraper.py  masakhane_loader.py  opus_loader.py  wikipedia_scraper.py
training/: test_model.py  train_nllb.py
upload/: dataset_builder.py  dataset_card.py  uploader.py
